--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A social media test app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node app.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix ozzia && npm run build --prefix ozzia"
   },
   "repository": {
     "type": "git",
