--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A social media test app",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix ozzia && npm run build --prefix ozzia"
+    "start": "node app.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ozzia && npm run build --prefix ozzia"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
-    "mongoose": "^5.9.14"
+    "mongoose": "^5.9.14",
+    "nodemailer": "^6.4.6"
   }
 }
