--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
-    "mongoose": "^5.9.14",
-    "nodemailer": "^6.4.6"
+    "mongoose": "^5.9.14"
   }
 }
